buc (2.0ubuntu0~ppa0) UNRELEASED; urgency=low

  * shut: Added window to authorize user and start session.  

 -- Andrea Colangelo <warp10@ubuntu.com>  Sat, 08 Jun 2013 10:39:43 +0200

buc (1.0ubuntu0~ppa0) precise; urgency=low

  * home.html: improved, based on firefox default page.
  * images/*: added accordingly.

 -- Andrea Colangelo <warp10@ubuntu.com>  Thu, 14 Feb 2013 20:19:15 +0100

buc (0.2ubuntu0~ppa1) precise; urgency=low

  * prefs.sh: drop code to handle locales.
  * shut:
    + remaining time now shown next to the icon;
    + changed order of options in menu;
    + PEP8'ed.
  * auto.sh: info dialog improved.
  * debian/post{inst,rm}: disable xterm and uxterm too.

 -- Andrea Colangelo <warp10@ubuntu.com>  Thu, 14 Feb 2013 12:00:17 +0100

buc (0.1ubuntu0~ppa1) precise; urgency=low

  * Initial Release.

 -- Andrea Colangelo <warp10@ubuntu.com>  Mon, 11 Feb 2013 11:40:45 +0100