@@ -1,6 +1,9 @@
 buc (2.0ubuntu0~ppa0) UNRELEASED; urgency=low
 
-  * shut: Added window to authorize user and start session.  
+  * shut: add window to authorize user and start session.  
+  * auto.sh:
+    + Do not create the firefox icon anymore.
+    + Do not use zenity to create the warning window. 
 
  -- Andrea Colangelo <warp10@ubuntu.com>  Sat, 08 Jun 2013 10:39:43 +0200
 
